--- a/src/style.scss
+++ b/src/style.scss
@@ -1,32 +1,36 @@
 @import "scss/libs/normalize.css";
+@import "scss/components/fonts";
+@import "scss/components/header";
+@import "scss/components/nav";
 
 html {
   font-size: 62.5%;
 }
 
 body {
+  font-family: "DIN Pro", Arial, sans-serif;
   display: grid;
-  grid-template-columns: 1fr 117rem 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 9.5rem 1fr 1fr;
-  background: #f2f2f2;
 }
 
 .header {
   width: 100%;
-  background-color: red;
+  height: 100%;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  background: #f2f2f2;
 }
 .main {
   width: 100%;
-  height: 10rem;
+  height: 100%;
   background-color: rgb(39, 6, 182);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
 .footer {
   width: 100%;
-  height: 10rem;
+  height: 100%;
   background-color: rgb(196, 161, 8);
   grid-column: 2 / 3;
   grid-row: 3 / 4;
@@ -34,7 +38,6 @@ body {
 .nav {
   width: 100%;
   height: 100%;
-  background-color: rgb(3, 206, 206);
   grid-column: 1 / 2;
   grid-row: 1 / 4;
 }
