--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,9 @@
 @import "scss/components/fonts";
 @import "scss/components/header";
 @import "scss/components/nav";
+@import "scss/components/main";
+@import "scss/components/buttons";
+@import "scss/components/more";
 
 html {
   font-size: 62.5%;
@@ -12,6 +15,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 9.5rem 1fr 1fr;
+  background-color: #f2f2f2;
 }
 
 .header {
@@ -19,12 +23,10 @@ body {
   height: 100%;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  background: #f2f2f2;
 }
 .main {
   width: 100%;
   height: 100%;
-  background-color: rgb(39, 6, 182);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
@@ -40,6 +42,7 @@ body {
   height: 100%;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
+  background-color: #fff;
 }
 .cart {
   width: 100%;
@@ -47,4 +50,9 @@ body {
   background-color: rgb(216, 3, 145);
   grid-column: 3 / 4;
   grid-row: 1 / 4;
+}
+
+.container {
+  margin: 0 auto;
+  width: 95rem;
 }
