--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   border-bottom: 0.5px solid #a4acad;
   .contacts {
     display: grid;
@@ -53,6 +53,8 @@ header {
       }
     }
     &__info {
+      letter-spacing: 1px;
+
       &-rev {
         display: inline-block;
         font-weight: 400;
@@ -67,7 +69,7 @@ header {
       }
     }
     &__search {
-      margin-left: 6.9rem;
+      margin-left: 2.9rem;
       width: 3rem;
       height: 3rem;
     }
