--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import "scss/components/main";
 @import "scss/components/buttons";
 @import "scss/components/more";
+@import "scss/components/cart";
 
 html {
   font-size: 62.5%;
@@ -13,41 +14,31 @@ html {
 body {
   font-family: "DIN Pro", Arial, sans-serif;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 1170px 1fr;
   grid-template-rows: 9.5rem 1fr 1fr;
-  background-color: #f2f2f2;
 }
 
 .header {
-  width: 100%;
-  height: 100%;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  background-color: #f2f2f2;
 }
 .main {
-  width: 100%;
-  height: 100%;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  background-color: #f2f2f2;
 }
 .footer {
-  width: 100%;
-  height: 100%;
   background-color: rgb(196, 161, 8);
   grid-column: 2 / 3;
   grid-row: 3 / 4;
+  background-color: #f2f2f2;
 }
 .nav {
-  width: 100%;
-  height: 100%;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
-  background-color: #fff;
 }
 .cart {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(216, 3, 145);
   grid-column: 3 / 4;
   grid-row: 1 / 4;
 }
