--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,35 +1,72 @@
 .nav {
-  padding: 2.6rem 4rem 0 0;
-  &__container {
+  padding: 2.6rem 3rem 0 2rem;
+  &__wrapper {
     display: flex;
     flex-direction: column;
   }
   &__logo {
-    align-self: flex-end;
     display: block;
+    align-self: flex-end;
     margin-right: 2rem;
-    width: 137px;
-    height: 140px;
+    width: 12rem;
+    img {
+      display: block;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
   }
   &__list {
     align-self: flex-end;
-    li {
+    padding-right: 1.5rem;
+    &-item {
       position: relative;
       font-weight: 400;
-      font-size: 2.4rem;
-      letter-spacing: 0.2rem;
-      margin-top: 3rem;
-      text-decoration: none;
+      font-size: 2rem;
+      letter-spacing: 0.1rem;
+      margin-top: 2rem;
       list-style-type: none;
-      cursor: pointer;
-      :hover {
-        color: #ff9846;
+      &_active::after {
+        display: block;
+        content: "СКОРО";
+        position: absolute;
+        width: 50px;
+        height: 15px;
+        background-color: rgb(223, 83, 64);
+        color: #ffff;
+        border-radius: 10px;
+        line-height: 14px;
+        top: -11px;
+        right: -11px;
+        font-weight: 400;
+        font-size: 1.1rem;
+        text-align: center;
       }
       img {
         position: absolute;
-        width: 3rem;
-        height: 3rem;
-        left: -5rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        left: -4rem;
+        cursor: default;
+      }
+    }
+    &-link {
+      display: inline-block;
+      text-decoration: none;
+    }
+    &-text {
+      color: #000000;
+      transition: color 0.4s linear;
+    }
+  }
+}
+
+@media (any-hover: hover) {
+  .nav {
+    &__list {
+      &-text:hover {
+        color: $main;
+        transition: color 0.1s linear;
       }
     }
   }
