--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,22 +1,49 @@
 .btn {
-  padding: 5px 42px;
-  width: 142px;
+  width: 12rem;
   height: 40px;
-  background: #f46d40;
+  text-align: center;
+  background: $main-color-d;
   border-radius: 5px;
   color: #f2f2f2;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 2rem;
   border: none;
   outline: none;
+  opacity: 0.9;
+  transition: opacity 0.5s linear;
   cursor: pointer;
-  &__cart {
+  &_cart {
     width: 100%;
     height: 40px;
     font-weight: 400;
-    font-size: 14px;
-    background: #ff9846;
+    font-size: 1.2rem;
+    background: $main;
     justify-self: flex-end;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+  }
+  &_carousel {
+    position: absolute;
+    width: 20.5rem;
+    height: 47px;
+    font-size: 2.5rem;
+    opacity: 1;
+    background-color: $main-color-d;
+    transition: background-color 0.5s linear;
+    bottom: 15px;
+    right: 28px;
+    z-index: 10;
+  }
+}
+
+@media (any-hover: hover) {
+  .btn {
+    &:hover {
+      opacity: 1;
+      transition: opacity 0.1s linear;
+    }
+    &_carousel:hover {
+      background-color: $main;
+      transition: background-color 0.1s linear;
+    }
   }
 }
