--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,77 +1,109 @@
 .header {
-  border-bottom: 0.5px solid #a4acad;
+  border-bottom: $border;
   .contacts {
     display: grid;
-    grid-template-columns: 22rem 58.5rem 22.5rem 9.9rem;
-    grid-template-rows: 1fr;
+    grid-template-columns: 2.3fr 4fr 2.5fr 0.6fr;
+    grid-template-rows: auto;
     align-items: center;
-    padding: 0.6rem 4rem 0.8rem 4.2rem;
     &__phone {
-      border-right: 0.5px solid #a4acad;
-    }
-    &__text {
-      font-weight: 500;
-      font-size: 1.8rem;
-      margin-left: 1.3rem;
-    }
-    &__number {
-      color: #ff9846;
-      font-weight: 500;
-      font-size: 1.8rem;
-    }
-    &__time {
-      position: relative;
-      font-weight: 500;
-      font-size: 14px;
-      color: #a4acad;
-      margin-top: 0.5rem;
-
-      &::before {
-        content: "";
-        width: 2rem;
-        height: 2rem;
-        display: block;
-        top: 0.15rem;
-        left: -2rem;
-        position: absolute;
-        background: url("./assets/img/header/clock.png") no-repeat;
+      padding: 0.6rem 0 0.8rem 3rem;
+      border-right: $border;
+      align-self: start;
+      &-text {
+        font-weight: 500;
+        font-size: 1.5rem;
+        margin-left: 1.3rem;
+        margin-bottom: 0.5rem;
+      }
+      &-number {
+        display: inline-block;
+        font-weight: 500;
+        font-size: 1.5rem;
+        text-decoration: none;
+        color: $main;
+        opacity: 0.7;
+        transition: opacity 0.3s linear;
+      }
+      &-time {
+        position: relative;
+        font-weight: 500;
+        font-size: 1.4rem;
+        color: $second-color;
+        margin-top: 0.5rem;
+        &::before {
+          content: "";
+          width: 2rem;
+          height: 2rem;
+          display: block;
+          top: 0.25rem;
+          left: -2rem;
+          position: absolute;
+          background: url("./assets/img/header/clock.png") no-repeat;
+        }
       }
     }
     &__sity {
       margin-left: 1rem;
       &-text {
         font-weight: 300;
-        font-size: 1.4rem;
-        color: #a4acad;
+        font-size: 1.6rem;
+        color: $second-color;
       }
       &-bishkek {
-        display: block;
         margin-top: 0.4rem;
         font-weight: 400;
         font-size: 1.8rem;
-        color: #000000;
       }
     }
     &__info {
       letter-spacing: 1px;
-
       &-rev {
         display: inline-block;
         font-weight: 400;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
       }
       &-delivery {
         display: inline-block;
-        margin-left: 1rem;
+        text-decoration: none;
+        opacity: 0.7;
+        transition: opacity 0.3s linear;
+        margin-left: 0.5rem;
         font-weight: 400;
-        font-size: 1.8rem;
-        color: #ff9846;
+        font-size: 1.6rem;
+        color: $main;
       }
     }
     &__search {
-      margin-left: 2.9rem;
-      width: 3rem;
-      height: 3rem;
+      width: 2.5rem;
+      height: 2.5rem;
+      cursor: pointer;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        transform: scale(100%);
+        transition: transform 0.3s linear;
+      }
+    }
+  }
+}
+
+@media (any-hover: hover) {
+  .contacts {
+    &__info-delivery,
+    &__phone-number {
+      &:hover {
+        opacity: 1;
+        transition: opacity 0.1s linear;
+      }
+    }
+    &__search {
+      img {
+        &:hover {
+          transform: scale(110%);
+          transition: transform 0.1s linear;
+        }
+      }
     }
   }
 }
