--- a/src/scss/components/_more.scss
+++ b/src/scss/components/_more.scss
@@ -1,21 +1,36 @@
 .more {
-  margin: 5rem 0 6rem 0;
-  font-size: 1.8rem;
+  margin: 3rem 0 3rem 0;
+  font-size: 1.5rem;
   font-weight: 400;
   color: #a4acad;
   &__title {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 2.2rem;
+    margin: 0;
+  }
+  &__descr {
+    margin: 0;
+    margin-top: 1rem;
+  }
+  &__menu-info {
+    margin: 0;
+    margin-top: 1rem;
+  }
+  &__list {
+    padding-left: 2.5rem;
+    margin: 0;
+    margin-top: 1rem;
   }
   &__info {
     text-align: center;
     position: relative;
-    font-size: 24px;
+    margin-top: 2rem;
+    font-size: 2rem;
     color: #f46d40;
     &::after {
       content: "";
       position: absolute;
-      top: 7px;
+      top: 4px;
       width: 10px;
       height: 10px;
       border-top: 1px solid #f46d40;
