--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,17 @@
 @import "scss/libs/normalize.css";
+@import "scss/base/variables";
 @import "scss/components/fonts";
 @import "scss/components/header";
 @import "scss/components/nav";
-@import "scss/components/main";
-@import "scss/components/buttons";
+@import "scss/components/line";
+@import "scss/components/carousel";
+@import "scss/components/catalog";
+@import "scss/components/slider";
 @import "scss/components/more";
+@import "scss/components/buttons";
 @import "scss/components/cart";
 @import "scss/components/footer";
+@import "scss/components/popup";
 
 html {
   font-size: 62.5%;
@@ -15,8 +20,8 @@ html {
 body {
   font-family: "DIN Pro", Arial, sans-serif;
   display: grid;
-  grid-template-columns: 1fr 1170px 1fr;
-  grid-template-rows: 9.5rem auto auto;
+  grid-template-columns: auto 85rem auto;
+  grid-template-rows: auto auto auto;
 }
 
 .header {
@@ -45,5 +50,5 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 95rem;
+  width: 70rem;
 }
