--- a/src/style.scss
+++ b/src/style.scss
@@ -7,11 +7,14 @@
 @import "scss/components/carousel";
 @import "scss/components/catalog";
 @import "scss/components/slider";
+@import "scss/components/product";
 @import "scss/components/more";
 @import "scss/components/buttons";
 @import "scss/components/cart";
 @import "scss/components/footer";
 @import "scss/components/popup";
+@import "scss/components/category";
+@import "scss/components/item-info";
 
 html {
   font-size: 62.5%;
