--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -4,6 +4,7 @@
   grid-template-columns: 1.5fr 2fr 2fr;
   grid-template-rows: 1fr;
   border-top: 0.5px solid $second-color;
+  margin-top: 3rem;
   &__about {
     border-right: 0.5px solid $second-color;
     font-weight: 400;
